test/tests/InstanceMethodOnClass2.panda
class InstanceMethodOnClass2 {
    method fail() {
    }

    @class
    method main() {
        InstanceMethodOnClass2.fail()
    }
}